@@ -1,3 +1,7 @@
+2012-05-26  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpz: Use MPZ_REALLOC return value when possible.
+
 2012-05-25 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* mini-gmp/tests/t-div.c: Test all _qr, _q, _r variants.
